--- a/frontend/src/app/layout/transfer/add-transfer/add-transfer.component.html
+++ b/frontend/src/app/layout/transfer/add-transfer/add-transfer.component.html
@@ -1,5 +1,13 @@
+<div class="main-header">
+    <h1 mat-dialog-title><b> {{ !this.data ? 'Add Transfer' : 'Update Transfer' }}</b> </h1>
+    <button mat-button mat-dialog-close>
+        <mat-icon>close</mat-icon>
+    </button>
+</div>
+<mat-divider></mat-divider>
+<br>
+
 <div class="container">
-    <h1 mat-dialog-title> {{ !this.data ? 'Add Transfer' : 'Update Transfer' }} </h1>
     <form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
 
         <!-- Date start -->
