--- a/frontend/src/app/layout/expense/add-expense/add-expense.component.html
+++ b/frontend/src/app/layout/expense/add-expense/add-expense.component.html
@@ -1,8 +1,11 @@
-<!--  -->
+<div class="main-header">
+    <h1 mat-dialog-title><b> {{ !this.data ? 'Add Expense' : 'Update Expense' }}</b> </h1>
+    <button mat-button mat-dialog-close>
+        <mat-icon>close</mat-icon>
+    </button>
+</div>
 <div class="container">
-    <h1 mat-dialog-title> {{ !this.data ? 'Add Expense' : 'Update Expense' }} </h1>
     <form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
-
         <!-- Date start -->
         <mat-form-field color="accent">
             <mat-label>Date</mat-label>
@@ -10,8 +13,6 @@
             <mat-datepicker-toggle matSuffix [for]="date"></mat-datepicker-toggle>
             <mat-datepicker #date></mat-datepicker>
         </mat-form-field>
-
-
         <!-- Description start -->
         <mat-form-field>
             <mat-label>Description</mat-label>
@@ -25,7 +26,6 @@
                 <span class="error">Description is Required</span>
             </ng-container>
         </div>
-
         <!-- Category start -->
         <mat-form-field>
             <mat-label>Category</mat-label>
@@ -35,7 +35,6 @@
                 </mat-option>
             </mat-select>
         </mat-form-field>
-
         <!-- Amount start -->
         <mat-form-field>
             <mat-label>Amount</mat-label>
@@ -47,13 +46,9 @@
             !formGroup.controls.amount.value
             ">
                 <span class="error">Amount Balance is Required</span>
-
             </ng-container>
         </div>
         <!-- <mat-slide-toggle>{{!this.amount ? 'Cash in': 'Cash out'}}</mat-slide-toggle> -->
-
-
-
         <!-- user start -->
         <mat-form-field>
             <mat-label>User To</mat-label>
@@ -63,7 +58,6 @@
                 </mat-option>
             </mat-select>
         </mat-form-field>
-
         <div class="btn-update">
             <button mat-raised-button color="primary" [disabled]="!formGroup.valid" type="submit">
                 <span>
