--- a/frontend/src/app/layout/expense/add-expense/add-expense.component.scss
+++ b/frontend/src/app/layout/expense/add-expense/add-expense.component.scss
@@ -1,15 +1,23 @@
+.main-header {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    .mat-dialog-title {
+        margin: 5px 0 0 0;
+        display: block;
+    }
+    .mat-button {
+        min-width: 40px;
+        padding: 0 10px;
+    }
+}
 .container {
     .mat-form-field {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-    }
-
-    .mat-dialog-title {
-      margin: 0 0 20px;
-      display: block;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
     }
     .input {
-      width: 100%;
+        width: 100%;
     }
-  }
+}
