--- a/frontend/src/app/layout/expense/cateogry/add-category/add-category.component.html
+++ b/frontend/src/app/layout/expense/cateogry/add-category/add-category.component.html
@@ -1,5 +1,11 @@
+<div class="main-header">
+    <h1 mat-dialog-title><b> {{ !this.data ? 'Add Category' : 'Update Category' }}</b> </h1>
+    <button mat-button mat-dialog-close>
+        <mat-icon>close</mat-icon>
+    </button>
+</div>
 <div class="container">
-    <h1 mat-dialog-title> {{ !this.data ? 'Add Category' : 'Update Category' }} </h1>
+
     <mat-divider></mat-divider>
     <br>
     <form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
