--- a/frontend/src/app/layout/expense/cateogry/category.component.html
+++ b/frontend/src/app/layout/expense/cateogry/category.component.html
@@ -1,5 +1,8 @@
-<div>
+<div class="main-header">
     <h1 mat-dialog-title><b>Expense Category</b></h1>
+    <button mat-button mat-dialog-close>
+        <mat-icon>close</mat-icon>
+    </button>
 </div>
 <mat-divider></mat-divider>
 <br>
@@ -13,7 +16,6 @@
         <button color="primary" class="margin" mat-raised-button (click)="getCategory()">
             Search
         </button>
-
         <button color="primary" mat-raised-button (click)="onAddCategory()">
             Add Category
         </button>
@@ -23,13 +25,10 @@
         </mat-slide-toggle>
     </span>
 </div>
-
-
 <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="code"
         matSortDirection="asc">
         *ngIf="!loader"
-
         <!-- code start -->
         <ng-container matColumnDef="code">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Code</th>
@@ -37,8 +36,6 @@
                 {{ element.code }}
             </td>
         </ng-container>
-
-
         <!-- name start -->
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
@@ -46,9 +43,7 @@
                 {{ element.name }}
             </td>
         </ng-container>
-
         <!-- action start -->
-
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef>Actions</th>
             <td mat-cell *matCellDef="let element">
@@ -62,12 +57,9 @@
                 </button>
             </td>
         </ng-container>
-
         <tr mat-header-row *matHeaderRowDef="displayedColumns"> </tr>
         <tr mat-row *matRowDef="let element; columns: displayedColumns"> </tr>
-
     </table>
-
     <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons
         (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
     </mat-paginator>
