--- a/frontend/src/app/layout/items/cateogry/add-items-category/add-items-category.component.scss
+++ b/frontend/src/app/layout/items/cateogry/add-items-category/add-items-category.component.scss
@@ -1,13 +1,26 @@
+.main-header {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+
+    .mat-dialog-title {
+        margin: 5px 0 0 0;
+        display: block;
+    }
+
+    .mat-button {
+        min-width: 40px;
+        padding: 0 10px;
+    }
+}
+
 .container {
     .mat-form-field {
         width: 100%;
         display: flex;
         flex-direction: column;
     }
-    .mat-dialog-title {
-        margin: 0 0 20px;
-        display: block;
-    }
+
     .input {
         width: 100%;
     }
