--- a/frontend/src/app/layout/items/cateogry/items-category.component.html
+++ b/frontend/src/app/layout/items/cateogry/items-category.component.html
@@ -1,5 +1,8 @@
-<div>
+<div class="main-header">
     <h1 mat-dialog-title><b>Item Category</b></h1>
+    <button mat-button mat-dialog-close>
+        <mat-icon>close</mat-icon>
+    </button>
 </div>
 <mat-divider></mat-divider>
 <br>
