--- a/frontend/src/app/layout/sales-quotation/create-quotation/create-quotation.component.scss
+++ b/frontend/src/app/layout/sales-quotation/create-quotation/create-quotation.component.scss
@@ -1,3 +1,16 @@
+.main-header{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    .mat-dialog-title {
+        margin: 5px 0 0  0;
+        display: block;
+    }
+    .mat-button {
+        min-width: 40px;
+        padding: 0 10px;
+    }
+}
 .container {
     .mat-form-field {
         width: 100%;
@@ -23,10 +36,7 @@
         }
     }
 
-    .mat-dialog-title {
-        margin: 0 0 20px;
-        display: block;
-    }
+
 
     .input {
         width: 100%;
