--- a/frontend/src/app/layout/suppliers/add-suppliers/add-suppliers.component.html
+++ b/frontend/src/app/layout/suppliers/add-suppliers/add-suppliers.component.html
@@ -1,7 +1,13 @@
+<div class="main-header">
+    <h1 mat-dialog-title><b> {{ !this.data ?'Add Suppliers' : 'Update Suppliers' }}</b> </h1>
+    <button mat-button mat-dialog-close>
+        <mat-icon>close</mat-icon>
+    </button>
+</div>
+<mat-divider></mat-divider>
+<br>
 <div class="container">
-    <h1 mat-dialog-title> {{ !this.data ? 'Add Suppliers' : 'Update Suppliers' }} </h1>
-    <mat-divider></mat-divider>
-    <br>
+
     <form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
 
         <!-- company start -->
