maxlengh in mobile number added

--- a/frontend/src/app/layout/cdf/add-cdf/add-cdf.component.html
+++ b/frontend/src/app/layout/cdf/add-cdf/add-cdf.component.html
@@ -222,8 +222,8 @@
                 <div class="block">
                     <mat-form-field>
                         <mat-label>Mobile Number</mat-label>
-                        <input matInput formControlName="mobile" minlength="10" (keyup)="onMobileCheck()"
-                            type="number" />
+                        <input matInput formControlName="mobile" maxlength="10" (keyup)="onMobileCheck()"
+                            type="tel"  />
                     </mat-form-field>
                     <div>
                         <ng-container *ngIf="!isMobileExist">
