--- a/frontend/src/app/layout/transfer/add-transfer/add-transfer.component.html
+++ b/frontend/src/app/layout/transfer/add-transfer/add-transfer.component.html
@@ -13,16 +13,25 @@
         <!-- Date start -->
         <mat-form-field color="accent">
             <mat-label>Date</mat-label>
-            <input matInput formControlName="date" [matDatepicker]="date">
+            <input matInput formControlName="date" [matDatepicker]="date" [max]="currentDate" required>
             <mat-datepicker-toggle matSuffix [for]="date"></mat-datepicker-toggle>
             <mat-datepicker #date></mat-datepicker>
         </mat-form-field>
+
+        <div>
+            <ng-container *ngIf="
+        formGroup.controls.date.touched &&
+        !formGroup.controls.date.value
+      ">
+                <span class="error">Date is Required</span>
+            </ng-container>
+        </div>
 
 
         <!-- Description start -->
         <mat-form-field>
             <mat-label>Description</mat-label>
-            <textarea matInput formControlName="description"></textarea>
+            <textarea matInput formControlName="description" required ></textarea>
         </mat-form-field>
         <div>
             <ng-container *ngIf="
@@ -36,7 +45,7 @@
         <!-- Amount start -->
         <mat-form-field>
             <mat-label>Amount</mat-label>
-            <input matInput formControlName="amount" type="number" />
+            <input matInput formControlName="amount" type="number" required/>
         </mat-form-field>
         <div>
             <ng-container *ngIf="
@@ -51,13 +60,24 @@
         <!-- user start -->
         <mat-form-field>
             <mat-label>User To</mat-label>
-            <mat-select formControlName="user" name="user">
+            <mat-select formControlName="user" name="user" required>
                 <mat-option *ngFor="let user of users" [value]="user.id">
                     {{user.user_name}}
                 </mat-option>
             </mat-select>
         </mat-form-field>
+        <div>
+            <ng-container *ngIf="
+          formGroup.controls.user.touched &&
+          !formGroup.controls.user.value
+        ">
+                <span class="error">User is Required</span>
 
+            </ng-container>
+        </div>
+
+        <!-- button start -->
+        <br>
         <div class="btn-update">
             <button mat-raised-button color="primary" [disabled]="!formGroup.valid || isShowLoader" type="submit">
                 <span *ngIf="!isShowLoader">
