--- a/frontend/src/app/layout/customers/tier/add-tier/add-tier.component.html
+++ b/frontend/src/app/layout/customers/tier/add-tier/add-tier.component.html
@@ -11,7 +11,7 @@
         <!-- Code start -->
         <mat-form-field>
             <mat-label>Code</mat-label>
-            <input matInput formControlName="code" />
+            <input matInput formControlName="code" required/>
         </mat-form-field>
         <div>
             <ng-container *ngIf="
