--- a/frontend/src/app/layout/expense/cateogry/add-category/add-category.component.html
+++ b/frontend/src/app/layout/expense/cateogry/add-category/add-category.component.html
@@ -13,7 +13,7 @@
         <!-- Code start -->
         <mat-form-field>
             <mat-label>Code</mat-label>
-            <input matInput formControlName="code" />
+            <input matInput formControlName="code" required />
         </mat-form-field>
         <div>
             <ng-container *ngIf="
@@ -27,7 +27,7 @@
         <!-- Name start -->
         <mat-form-field>
             <mat-label>Name</mat-label>
-            <input matInput formControlName="name" />
+            <input matInput formControlName="name" required />
         </mat-form-field>
         <div>
             <ng-container *ngIf="
