--- a/frontend/src/app/layout/items/add-item/add-item.component.html
+++ b/frontend/src/app/layout/items/add-item/add-item.component.html
@@ -13,7 +13,7 @@
             <div class="block">
                 <mat-form-field>
                     <mat-label>Item Code</mat-label>
-                    <input matInput formControlName="item_code" />
+                    <input matInput formControlName="item_code" required/>
                 </mat-form-field>
                 <div>
                     <ng-container *ngIf="
@@ -28,7 +28,7 @@
             <div class="block">
                 <mat-form-field>
                     <mat-label>Item Name</mat-label>
-                    <input matInput formControlName="item_name" />
+                    <input matInput formControlName="item_name" required/>
                 </mat-form-field>
                 <div>
                     <ng-container *ngIf="
@@ -43,7 +43,7 @@
             <div class="block">
                 <mat-form-field>
                     <mat-label>Category</mat-label>
-                    <mat-select formControlName="category" name="category">
+                    <mat-select formControlName="category" name="category" required>
                         <mat-option *ngFor="let category of categories" [value]="category.id">
                             {{category.code}}
                         </mat-option>
@@ -62,7 +62,7 @@
             <div class="block">
                 <mat-form-field>
                     <mat-label>Int. Qty</mat-label>
-                    <input matInput formControlName="int_qty" type="number" />
+                    <input matInput formControlName="int_qty" type="number" required />
                 </mat-form-field>
                 <div>
                     <ng-container *ngIf="
@@ -77,7 +77,7 @@
             <div class="block">
                 <mat-form-field>
                     <mat-label>SILVER</mat-label>
-                    <input type="number" matInput formControlName="silver" />
+                    <input type="number" matInput formControlName="silver" required />
                 </mat-form-field>
                 <div>
                     <ng-container *ngIf="
@@ -94,7 +94,7 @@
             <div class="block">
                 <mat-form-field>
                     <mat-label>RETAIL</mat-label>
-                    <input matInput formControlName="retail" type="number" />
+                    <input matInput formControlName="retail" type="number" required />
                 </mat-form-field>
                 <div>
                     <ng-container *ngIf="
@@ -108,7 +108,7 @@
             <div class="block">
                 <mat-form-field>
                     <mat-label>GOLD</mat-label>
-                    <input matInput formControlName="gold" type="number" />
+                    <input matInput formControlName="gold" type="number"  required />
                 </mat-form-field>
                 <div>
                     <ng-container *ngIf="
@@ -123,7 +123,7 @@
             <div class="block">
                 <mat-form-field>
                     <mat-label>INDIAMART</mat-label>
-                    <input matInput formControlName="india_mart" type="number" />
+                    <input matInput formControlName="india_mart" type="number"  required />
                 </mat-form-field>
                 <div>
                     <ng-container *ngIf="
@@ -138,7 +138,7 @@
             <div class="block">
                 <mat-form-field>
                     <mat-label>DEALER</mat-label>
-                    <input matInput formControlName="dealer" type="number" />
+                    <input matInput formControlName="dealer" type="number" required />
                 </mat-form-field>
                 <div>
                     <ng-container *ngIf="
@@ -153,16 +153,9 @@
             <div class="block">
                 <mat-form-field>
                     <mat-label>Comment</mat-label>
-                    <textarea matInput formControlName="comment"></textarea>
+                    <textarea matInput formControlName="comment" ></textarea>
                 </mat-form-field>
-                <div>
-                    <ng-container *ngIf="
-                formGroup.controls.comment.touched &&
-                !formGroup.controls.comment.value
-                ">
-                        <span class="error">Comment is Required</span>
-                    </ng-container>
-                </div>
+
             </div>
         </div>
     </div>
@@ -181,7 +174,7 @@
             <div class="block">
                 <mat-form-field class="input_width">
                     <mat-label>Name</mat-label>
-                    <input matInput formControlName="supplier_name" />
+                    <input matInput formControlName="supplier_name" required />
                 </mat-form-field>
                 <div>
                     <ng-container *ngIf="
@@ -196,7 +189,7 @@
             <div class="block">
                 <mat-form-field>
                     <mat-label>Qty</mat-label>
-                    <input matInput formControlName="supplier_qty" type="number" />
+                    <input matInput formControlName="supplier_qty" type="number" required/>
                 </mat-form-field>
                 <div>
                     <ng-container *ngIf="
@@ -213,7 +206,7 @@
             <div class="block">
                 <mat-form-field class="input_width">
                     <mat-label>Rate</mat-label>
-                    <input matInput formControlName="supplier_rate" type="number" />
+                    <input matInput formControlName="supplier_rate" type="number" required/>
                 </mat-form-field>
                 <div>
                     <ng-container *ngIf="
