--- a/frontend/src/app/layout/items/cateogry/add-items-category/add-items-category.component.html
+++ b/frontend/src/app/layout/items/cateogry/add-items-category/add-items-category.component.html
@@ -11,7 +11,7 @@
         <!-- Code start -->
         <mat-form-field>
             <mat-label>Code</mat-label>
-            <input matInput formControlName="code" />
+            <input matInput formControlName="code" required />
         </mat-form-field>
         <div>
             <ng-container *ngIf="
@@ -24,7 +24,7 @@
         <!-- Name start -->
         <mat-form-field>
             <mat-label>Name</mat-label>
-            <input matInput formControlName="name" />
+            <input matInput formControlName="name" required />
         </mat-form-field>
         <div>
             <ng-container *ngIf="
