--- a/frontend/src/app/layout/items/add-item/add-item.component.html
+++ b/frontend/src/app/layout/items/add-item/add-item.component.html
@@ -1,5 +1,5 @@
 <div class="main-header">
-    <h1 mat-dialog-title><b> {{ !this.data ?  'Add Item' : 'Update Item' }}</b> </h1>
+    <h1 mat-dialog-title><b> {{ !this.data ? 'Add Item' : 'Update Item' }}</b> </h1>
     <button mat-button mat-dialog-close>
         <mat-icon>close</mat-icon>
     </button>
@@ -13,7 +13,7 @@
             <div class="block">
                 <mat-form-field>
                     <mat-label>Item Code</mat-label>
-                    <input matInput formControlName="item_code" required/>
+                    <input matInput formControlName="item_code" required />
                 </mat-form-field>
                 <div>
                     <ng-container *ngIf="
@@ -28,7 +28,7 @@
             <div class="block">
                 <mat-form-field>
                     <mat-label>Item Name</mat-label>
-                    <input matInput formControlName="item_name" required/>
+                    <input matInput formControlName="item_name" required />
                 </mat-form-field>
                 <div>
                     <ng-container *ngIf="
@@ -108,7 +108,7 @@
             <div class="block">
                 <mat-form-field>
                     <mat-label>GOLD</mat-label>
-                    <input matInput formControlName="gold" type="number"  required />
+                    <input matInput formControlName="gold" type="number" required />
                 </mat-form-field>
                 <div>
                     <ng-container *ngIf="
@@ -123,7 +123,7 @@
             <div class="block">
                 <mat-form-field>
                     <mat-label>INDIAMART</mat-label>
-                    <input matInput formControlName="india_mart" type="number"  required />
+                    <input matInput formControlName="india_mart" type="number" required />
                 </mat-form-field>
                 <div>
                     <ng-container *ngIf="
@@ -153,9 +153,8 @@
             <div class="block">
                 <mat-form-field>
                     <mat-label>Comment</mat-label>
-                    <textarea matInput formControlName="comment" ></textarea>
+                    <textarea matInput formControlName="comment"></textarea>
                 </mat-form-field>
-
             </div>
         </div>
     </div>
@@ -167,34 +166,31 @@
 <form [formGroup]="formSupplier" (ngSubmit)="addSupplier()">
     <div class="supplier_details_table">
         <div class="box">
-
-
             <!-- company start -->
-
             <div class="block">
                 <mat-form-field class="input_width">
                     <mat-label>Name</mat-label>
-                    <mat-select formControlName="suppliersCompany" name="supplier" required>
-                        <mat-option *ngFor="let supplier of suppliersCompany" [value]="supplier.company">
-                            {{supplier.company}}
+                    <mat-select formControlName="suppliers_id" name="supplier" required>
+                        <mat-option *ngFor="let supplier of suppliersCompany" [value]="supplier?.id">
+                            {{supplier?.company}}
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
                 <div>
                     <ng-container *ngIf="
-                formSupplier.controls.suppliersCompany.touched &&
-                !formSupplier.controls.suppliersCompany.value
+                formSupplier.controls.suppliers_id.touched &&
+                !formSupplier.controls.suppliers_id.value
                 ">
                         <span class="error">Name is Required</span>
                     </ng-container>
                 </div>
             </div>
-
             <!-- rate start -->
             <div class="block">
                 <mat-form-field class="input_width">
                     <mat-label>Rate</mat-label>
-                    <input matInput formControlName="item_supplier_rate" type="number" required/>
+                    <input matInput formControlName="item_supplier_rate" [(ngModel)]="supplierRate" type="number"
+                        required />
                 </mat-form-field>
                 <div>
                     <ng-container *ngIf="
@@ -214,14 +210,13 @@
 </form>
 <br>
 <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="supplierDataSource" matSort matSortActive="company" matSortDirection="asc">
-        <ng-container matColumnDef="suppliersCompany">
+    <table mat-table [dataSource]="supplierDataSource" matSort matSortActive="supplier_name" matSortDirection="asc">
+        <ng-container matColumnDef="supplier_name">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Company</th>
             <td mat-cell *matCellDef="let suppliers">
-                {{ suppliers.suppliersCompany }}
+                {{ suppliers.supplier_name }}
             </td>
         </ng-container>
-
         <ng-container matColumnDef="item_supplier_rate">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Rate</th>
             <td mat-cell *matCellDef="let suppliers">
@@ -232,7 +227,7 @@
             <th mat-header-cell *matHeaderCellDef>Actions</th>
             <td mat-cell *matCellDef="let element">
                 <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
-                    (click)="getItemSupplier(element)">
+                    (click)="supplierFillForm(element.suppliers_id)">
                     <mat-icon aria-label="Edit">edit</mat-icon>
                 </button>
                 <button mat-icon-button matTooltip="Click to Delete" color="warn" (click)="confirmDialog(element.id)">
